--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 *
 
 ## except 
-example_data/mesh/
-example_data/data/
-lib/
-namelists/
-README.md
-runscript.demo1.r
-myrunscript.r
+!example_data/mesh/
+!example_data/data/
+!lib/
+!namelists/
+!README.md
+!runscript.demo1.r
+!myrunscript.r
