--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/functions"]
 	path = lib/functions
-	url = https://github.com/mo0zi/functions.git
+	url = https://github.com/chrisdane/functions.git
